<resources>
    <string name="app_name">My Mart Admin</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="product_name">Product Name</string>
    <string name="update">Update</string>
    <string name="add">Add</string>
    <string name="shelf_number">Shelf Number</string>
    <string name="row_number">Row Number</string>
    <string name="products_collection">Products</string>
    <string name="my_malt">My Malt</string>
    <string name="logout">Logout</string>
    <string name="product_number">Product Number</string>
    <string name="no_data_found">No Data Found</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="send">Send</string>
    <string name="pin_to_top">Pin To Top</string>
    <string name="unpin">Unpin</string>


    <string-array name="shelf_number">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>