<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.auth.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">
            <EditText
                android:id="@+id/login_email_id"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/email"
                android:layout_marginTop="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:inputType="textEmailAddress"
                android:background="@drawable/edit_text_background"/>
            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/password"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:layout_marginTop="8dp"
                android:inputType="textPassword"
                android:background="@drawable/edit_text_background"/>

            <TextView
                android:id="@+id/login_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAlignment="textEnd"
                android:textSize="16sp"
                android:textColor="@color/colorPrimary"
                android:text="@string/forgot_password"/>

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:textSize="14sp"
                android:text="@string/login"
                android:layout_marginTop="16dp"
                android:textColor="@color/white"
                android:background="@drawable/button_background"/>
        </LinearLayout>

    </ScrollView>


    <RelativeLayout
        android:id="@+id/progress_bar_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_small"
        android:layout_centerInParent="true"
        android:background="@drawable/progress_bar_background"
        android:visibility="invisible">
        <ProgressBar
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerInParent="true"/>
    </RelativeLayout>




</RelativeLayout>