<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_small"
    tools:context=".fragments.update.UpdateProductFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_name"
        android:textColor="@color/splash_back"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <EditText
        android:id="@+id/update_product_name_et"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/product_name"
        android:inputType="textPersonName"
        android:paddingStart="@dimen/margin_small"
        android:paddingEnd="@dimen/margin_small"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/shelf_number"
        android:textColor="@color/splash_back"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_product_name_et" />

    <EditText
        android:id="@+id/update_shelf_number_et"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/shelf_number"
        android:inputType="number"
        android:paddingStart="@dimen/margin_small"
        android:paddingEnd="@dimen/margin_small"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/row_number"
        android:textColor="@color/splash_back"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_shelf_number_et" />

    <EditText
        android:id="@+id/update_row_number_et"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/row_number"
        android:inputType="number"
        android:paddingStart="@dimen/margin_small"
        android:paddingEnd="@dimen/margin_small"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/product_number"
        android:textColor="@color/splash_back"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_row_number_et" />

    <EditText
        android:id="@+id/update_product_number_et"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/product_number"
        android:inputType="number"
        android:paddingStart="@dimen/margin_small"
        android:paddingEnd="@dimen/margin_small"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <RelativeLayout
        android:id="@+id/progress_bar_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/progress_bar_background"
        android:padding="@dimen/margin_small"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerInParent="true" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>